# FibreScope---Fibre-Scaffold-Analysis-Software

./: .gitignore  CMakeLists.txt  README.md  data.json  main.py  requirements.txt  run.py
core/: io.py  render.py
core/fibreCore/: contourPrefix.py  dataset.py  extract_to_data.py  fibreMeasure.py  fibre_measure.py  label_data.py  model.py  predict.py  train.py
core/poreCore/: area.py  dataset.py  extract_to_data.py  label_data.py  model.py  poreModel.pth  pore_measure.py  poresMeasure.py  predict.py  test.py  train.py
scaffoldAnalysis/: data.json  main.py
scaffoldAnalysis - GitHub/: data.json
scaffoldAnalysis - GitHub/core/: render.py
scaffoldAnalysis - GitHub/core/fibreCore/: fibreModel.pth  label_data.py  predict.py
scaffoldAnalysis - GitHub/core/poreCore/: label_data.py
scaffoldAnalysis - GitHub/ui/: about.py  about.ui  main.ui  warningWindow.py
scaffoldAnalysis/core/: io.py
scaffoldAnalysis/core/fibreCore/: extract_to_data.py  fibreMeasure.py  train.py
scaffoldAnalysis/core/poreCore/: poresMeasure.py
scaffoldAnalysis/ui/: about.py  inputDialog.py  subUi.py
src/cpp/: measure_tool.cpp
src/python/: __init__.py  main.py
src/python/core/: fibre_measure.py  render.py
src/python/ui/: about.py  mainWindow.py  subUi.py
ui/: about.py  about.ui  inputDialog.py  main.ui  mainWindow.py  subUi.py  warningWindow.py
